@@ -217,9 +217,13 @@
 	- python: bare bones rollback bindings.
 	- python: enable threads on callbacks and longish rpmlib calls.
 	- python: expose RPMTAG_SOURCEPACKAGE to identify source headers.
-	- python: eliminate headerFromPackage() tuple return, deprecated.
+	- python: eliminate rpm.headerFromPackage() tuple return, deprecated.
 	- python: add ts.hdrFromFdno(fdno) method.
 	- fix: check for lead magic, better error message on failure (#69751).
+	- python: the death of rpmdb-py.[ch], use ts.fooDB() methods instead.
+	- python: the death of rpm.headerFromPackage(), use ts.hdrFromFdno().
+	- python: permit direct ts.dbMatch() python iterations.
+	- python: the death of rpm.checksig(), use ts.hdrFromFdno() instead.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
